--- a/settings.py.dist
+++ b/settings.py.dist
@@ -1,7 +1,6 @@
-ROOT_DIR = '/home/abhishek/dev/gandalf/'
+ROOT_DIR = '/full/path/to/repo/'
 
-MONGO_HOST = '10.70.16.147'
-#MONGO_HOST = 'localhost'
+MONGO_HOST = 'localhost'
 MONGO_PORT = 27017
 
 weekmap = {'Monday' : 0, 'Tuesday' : 1, 'Wednesday' : 2, 'Thursday' : 3, 'Friday' : 4, 'Saturday' : 5, 'Sunday' : 6}
