--- a/pico/pico.wsgi.dist
+++ b/pico/pico.wsgi.dist
@@ -1,9 +1,11 @@
 import sys
-ROOT_DIR = '/home/abhishek/dev/goibibo_dashboard/'
+# optional path to virtualenv
+site.addsitedir('/path/to/virtualenv/lib/pythonX.X/site-packages')
+ROOT_DIR = '/path/to/repo/'
 sys.stdout = sys.stderr # sys.stdout access restricted by mod_wsgi
 path = ROOT_DIR # import pico from this dir
 path1 = ROOT_DIR + "pico/" # import pico from this dir
-path2 = ROOT_DIR + "dashboard_engine/" # the modules you want to be usable by Pico
+path2 = ROOT_DIR + "engine/" # the modules you want to be usable by Pico
 sys.path.insert(0, path)
 sys.path.insert(0, path1)
 sys.path.insert(0, path2)
