improving url mappings

--- a/pico/pico.wsgi.dist
+++ b/pico/pico.wsgi.dist
@@ -1,7 +1,8 @@
 import sys
 # optional path to virtualenv
+import site
 site.addsitedir('/path/to/virtualenv/lib/pythonX.X/site-packages')
-ROOT_DIR = '/path/to/repo/'
+ROOT_DIR = '/home/abhishek/dev/gandalf'
 sys.stdout = sys.stderr # sys.stdout access restricted by mod_wsgi
 path = ROOT_DIR # import pico from this dir
 path1 = ROOT_DIR + "pico/" # import pico from this dir
